work on main section which contains aside and sections

--- a/css/index.css
+++ b/css/index.css
@@ -58,3 +58,63 @@ nav{
     height: 2rem;
     width: 4rem;
 }
+
+/* main section */
+/* category section */
+#main{
+
+}
+.food-category{
+
+}
+#categories{
+
+}
+.category{
+
+}
+
+/* food section */
+
+.item .one{
+
+}
+.item{
+
+}
+.one{
+
+}
+.item-category{
+
+}
+.item{
+
+}
+.item-image{
+
+}
+.item-desc{
+
+}
+.item-name{
+
+}
+.item-detail{
+
+}
+.item-count{
+
+}
+.minus{
+
+}
+.item-total{
+
+}
+.plus{
+
+}
+.item-price{
+    
+}
