--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,9 @@ nav{
     width: 100%;
     z-index: 10;
     height: 7.2rem;
-    /* position: fixed; */
+    position: sticky;
+    top: 0;
+    background-color: rgb(112, 44, 99);;
 }
 .left{
     display: flex;
@@ -71,8 +73,10 @@ nav{
     grid-template-columns: 1fr 3fr;
     /* margin-top: 60px; */
 }
-.food-category{
-    
+aside{
+    position: sticky;
+    top: 115.198px;
+    align-self: flex-start
 }
 #categories{
 
