--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,6 @@ nav{
     height: 7.2rem;
     position: sticky;
     top: 0;
-    background-color: rgb(112, 44, 99);;
 }
 .left{
     display: flex;
@@ -132,6 +131,7 @@ aside{
 .item-count{
     display: flex;
     justify-content: right;
+    align-items: baseline;
     margin-left: 2rem;
 }
 .minus{
@@ -151,4 +151,24 @@ aside{
 .item-price{
     position: relative;
     top: -6.2rem;
+}
+#sizes{
+
+}
+.btn-addToCart{
+
+}
+
+#sizes option{
+    background-color: white;
+    color: black;
+}
+
+#sizes,.btn-addToCart{
+    
+    color: white;
+    background: none;
+    border: 0;
+    padding: 0;
+    height: 2rem;
 }
