--- a/css/index.css
+++ b/css/index.css
@@ -217,3 +217,18 @@ aside{
     margin-left: auto;
 }
 
+#cart-total{
+    margin-top: .2rem;
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    border: 1px solid white;
+}
+
+.numeric {
+    margin-left: auto;
+}
+
+button.btn-checkout {
+    grid-area: 2 / 1 / 3 / 3;
+}
