--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ nav{
     height: 7.2rem;
     position: sticky;
     top: 0;
+    background-color: #4c0f40;
 }
 .left{
     display: flex;
@@ -81,7 +82,7 @@ nav{
 aside{
     position: sticky;
     top: 115.198px;
-    align-self: flex-start
+    align-self: flex-start;
 }
 #categories{
 
@@ -110,6 +111,7 @@ aside{
     align-items: center;
     grid-template-columns: 1fr 3fr; 
     gap: 1.5rem;
+    background-color: #4c0f40;
 }
 .one{
 
@@ -204,7 +206,7 @@ aside{
     z-index: 1000;
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
-    background-color: rgb(212, 94, 94);
+    background-color: #4c0f40;
 }
 
 #cart-section .cart-item{
