--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(112, 44, 99);
+    background-color: rgb(91, 21, 78);
     
 }
 nav{
@@ -112,6 +112,7 @@ aside{
     grid-template-columns: 1fr 3fr; 
     gap: 1.5rem;
     background-color: #4c0f40;
+    border-radius: 2rem;
 }
 .one{
 
